# sb2git

./: .gitignore  main.py  pyproject.toml
docs/: index.md
src/sb2git/: __init__.py
