[project]
name = "sb2git"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "faretek", email = "r@faretek.dev" }]
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "python-slugify>=8.0.4",
    "scratchattach==3.0.0b2",
    "tomlkit>=0.14.0",
]

[project.scripts]
sb2git = "sb2git:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "zensical>=0.0.23",
]
